Bug 513482 - [Themes] A few Orion Font Icon's onhover colour is bad if it's parent's background is dark blue Bug 513279 - Focused QuickFix button text is hard to read Bug 499571 - folder name almost invisible during import Bug 509233 - Fix a dark label in the light theme Bug 514145 - [theme] The content assist selected colour is green in the light theme Also modified js-demo and added textviewtooltip backgound color and content assist selected colour to "Flovor Color" category of IDE theming

--- a/bundles/org.eclipse.orion.client.ui/web/css/controls.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/controls.css
@@ -1513,6 +1513,7 @@ html[dir="rtl"] .progressBarWrapper { /* ACGC */
 	text-overflow: ellipsis;
 	vertical-align: middle;
 	white-space: nowrap;
+	color: white;
 }
 
 .progressBarWrapper .progressBar {
